--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,6 +7,10 @@ spring:
   ai:
     openai:
       api-key: SPRING_AI_OPENAI_API_KEY
+  servlet:
+    multipart:
+      max-file-size: 50MB
+      max-request-size: 50MB
 server:
   tomcat:
     max-http-header-size: 16384
